<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/all_films"
        android:icon="@drawable/ic_live_tv_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/all_films" />
    <item
        android:id="@+id/film_favorite"
        android:icon="@drawable/ic_favorite_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menuLike" />
    <item
        android:id="@+id/filmsWatchLater"
        android:icon="@drawable/ic_notifications_active_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/watchLater"
        android:visible="false"/>
</menu>