...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/bgColor"
                tools:itemCount="33"
                tools:listitem="@layout/item_film" />

...
