...
    <ImageView
        android:id="@+id/watchLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toLeftOf="@id/imageFavourite"
        app:layout_constraintTop_toBottomOf="@id/descriptionFilm"
        tools:src="@drawable/ic_notifications_none_black_24dp"
        android:contentDescription="@string/watchlaterimage" />

    <ImageView
        android:id="@+id/imageFavourite"
...
